# social-parser

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: ci_py.yml  code.yml  release_cargo.yml  stale.yml  workflow.yml
crates/social-parser/: Cargo.toml  README.md
crates/social-parser/src/: lib.rs
crates/social-parser/src/bindings/: typescript.rs
crates/social-parser/src/bindings/typescript/: mod.rs
crates/social-parser/src/common/: mod.rs  types.rs
examples/rust/: Cargo.toml  README.md
examples/rust/examples/: followers.rs  loadandsave.rs  messages.rs
examples/rust/src/: main.rs
examples/typescript/: README.md  bun.lockb  index.ts  package.json
src/: index.cts  load.cts
