[package]
name = "social-parser"
version = "0.1.0"
description = "Library to process archive bundles from social platforms"
authors = ["Justin Chung"]
license = "LGPL-3.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.22", features = ["serde", "std"] }
neon = "1"
