[package]
name = "social_parser"
version = "0.1.0"
description = "Library to process archive bundles from social platforms"
authors = ["Justin Chung"]
homepage = "https://github.com/justin13888/social-parser"
repository = "https://github.com/justin13888/social-parser"
readme = "README.md"
keywords = ["social", "parser", "archive", "data"]
license = "LGPL-3.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = [
    "lib",
    "cdylib"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.22", features = ["serde", "std"] }
neon = "1"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
